# ChangeLog for eix - Ebuild IndeX for portage

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Fixed trim/rtrim/ltrim: strings that only contain trim-characters are
	  cleared now. This fixes all the 'Unable to split mask "" ..' bugs.
	- portage-2.1 introduced big changes to the depcache-handling, the old
	  cache is no longer removed. Old entries are not removed. But update-eix
	  needs the cache to be ok, thus eix-sync removes the old depcache in
	  /var/cache/edb/dep.
	- More verbose output if problems with files in /etc/portage/ or the
	  profile pop up.
	  This should stop reports like http://bugs.gentoo.org/show_bug.cgi?id=116592
	- Fixed http://bugs.gentoo.org/show_bug.cgi?id=117407 and removed a
	  compilation-error for -pedantic -ansi -W -Wall -Werror
	- Moved the code in ExplodeAtom from regex to short, _fast_ and hand-written
	  parser-code.
	- Added a compare(..) method to basicversion. This compare-method is used
	  in all other comparators, thus decreasing LOC and a bit more efficient.
	- Rewrote big parts of Mask; Be more verbose about parse-errors; Correctly
	  parse wildcard-stuff; Remove regular-expression stuff;
	- Default cache for PORTDIR_CACHE_METHOD can be chosen by
	  configure-parameter.

*eix-0.5

	Emil Beinroth <emilbeinroth at gmx.net>:
	- Fixed a small bug regarding -o/-a and atoms with a pattern .. thanks to
	  leonie for bringing this to my attention.
	- Added PROVIDE; bumped db-version
	- Fixing http://bugs.gentoo.org/show_bug.cgi?id=111927
	- Added our own strndup-implementation that will be used for ppc-macos
	  See http://bugs.gentoo.org/show_bug.cgi?id=111912
	- Finally, environment variables can be used to override eixrc-stuff.
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=111865, thanks JeR
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=112776
	- Applied patch from http://bugs.gentoo.org/show_bug.cgi?id=112806
	- Applied patches for scandir, sed, byteorder and regex from