@@ -13,6 +13,8 @@ libcache_a_SOURCES = base.h base.cc \
 					 cdb/cdb.h cdb/cdb.cc \
 					 backport/backport.cc backport/backport.h \
 					 backport/backport-utils.cc backport/backport-utils.h \
+					 metadata/metadata-utils.cc metadata/metadata-utils.h \
+					 metadata/metadata.cc metadata/metadata.h \
 					 cache-map.cc cache-map.h
 
 cache-map.cc:
