@@ -5,7 +5,7 @@ function to_classname () {
 	echo "${1:1}Cache"
 }
 
-cache_names="backport cdb flat none"
+cache_names="backport cdb flat none metadata"
 
 cat<<END
 // AUTOGENERATED BY MAKE .. DO NOT EDIT!
